<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- Business Name Cardview -->
    <android.support.v7.widget.CardView
        android:id="@+id/cardview_Name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <!-- Business Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/business_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <!-- ScrollView containing Business Details-->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cardview_Phone_Share"
        android:layout_below="@id/cardview_Name"
        android:fillViewport="true"
        android:layout_centerInParent="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/colorPrimary"
            >

            <!-- Business Images Cardview -->
            <android.support.v7.widget.CardView
                android:id="@+id/cardview_Logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <!-- Business Images-->
                <ImageView
                    android:id="@+id/imageView_Logo"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/img_1" />

                <!-- Button to get Previous Image of Business -->
                <ImageButton
                    android:id="@+id/imageView_Previous"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="start"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="140dp"
                    android:background="@drawable/back"
                    android:onClick="callPreviousImage" />

                <!-- Button to get Next Image of Business -->
                <ImageButton
                    android:id="@+id/imageView_Next"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="140dp"
                    android:background="@drawable/next"
                    android:onClick="callNextImage" />
            </android.support.v7.widget.CardView>

            <!-- Business Detail Cardview-->
            <android.support.v7.widget.CardView
                android:id="@+id/cardview_Connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_Logo"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <!-- Business Social Site Links -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <!-- Button for Facebook Link-->
                        <ImageButton
                            android:id="@+id/button_Facebook"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="2dp"
                            android:background="@drawable/facebook" />

                        <!-- Button for Twitter Link -->
                        <ImageButton
                            android:id="@+id/button_Twitter"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="2dp"
                            android:background="@drawable/twitter" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/aboutus_lbl"
                        android:textColor="#90A4AE"
                        android:textSize="12sp" />

                    <!-- Businesss Description Textview-->
                    <TextView
                        android:id="@+id/textView_AboutUs_Desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/aboutus_desc"
                        android:textColor="@color/colorText"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/add_lbl"
                        android:textColor="#90A4AE"
                        android:textSize="12sp" />

                    <!-- Business Location Details-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">

                        <!-- Location Icon Image -->
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_margin="1dp"
                            android:src="@drawable/pin" />

                        <!-- Location of Business-->
                        <TextView
                            android:id="@+id/textView_Location"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:text="@string/business_add"
                            android:textColor="@color/colorText"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/website_lbl"
                        android:textColor="#90A4AE"
                        android:textSize="12sp" />

                    <!-- Business Web site details-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">

                        <!-- Business Website Icon-->
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_margin="1dp"
                            android:src="@drawable/web" />

                        <!-- Busienss Website Address -->
                        <TextView
                            android:id="@+id/textView_Website"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="1dp"
                            android:gravity="center"
                            android:text="@string/business_website"
                            android:autoLink="web"
                            android:textColor="@color/colorText"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <!-- Cardview to Share Business Card or to Call Business-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardview_Phone_Share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">


        <!-- Share button to share Business card-->
        <ImageButton
            android:id="@+id/button_Share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/share" />

        <!-- Phone button to Call Business phone-->
        <ImageButton
            android:id="@+id/button_Phone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/phone"

            />

    </android.support.v7.widget.CardView>
</RelativeLayout>